trying to fix signin button not showing on homepage in first visit

--- a/public/global/css/styles.css
+++ b/public/global/css/styles.css
@@ -2,7 +2,7 @@ body.home {
     height:100%;
     margin:0;
     font-size:24px;
-    /*font-family: 'Open Sans', sans-serif;*/
+    font-family: 'Open Sans', sans-serif;
     font-weight:400;
     line-height:1.8em;
     color:#666;
